app/grammar/Lex_Par/ontologyParser.cpp

// Generated from c:\Users\Admin\Desktop\ODE\app\grammar\ontology.g4 by ANTLR 4.8


#include "ontologyVisitor.h"

#include "ontologyParser.h"


using namespace antlrcpp;
using namespace antlr4;

ontologyParser::ontologyParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ontologyParser::~ontologyParser() {
  delete _interpreter;
}

std::string ontologyParser::getGrammarFileName() const {
  return "ontology.g4";
}

const std::vector<std::string>& ontologyParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ontologyParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

ontologyParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ontologyParser::FrameContext* ontologyParser::FileContext::frame() {
  return getRuleContext<ontologyParser::FrameContext>(0);
}

tree::TerminalNode* ontologyParser::FileContext::EOF() {
  return getToken(ontologyParser::EOF, 0);
}


size_t ontologyParser::FileContext::getRuleIndex() const {
  return ontologyParser::RuleFile;
}


antlrcpp::Any ontologyParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::FileContext* ontologyParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, ontologyParser::RuleFile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    frame();
    setState(35);
    match(ontologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FrameContext ------------------------------------------------------------------

ontologyParser::FrameContext::FrameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::FrameContext::FRAME() {
  return getToken(ontologyParser::FRAME, 0);
}

tree::TerminalNode* ontologyParser::FrameContext::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::FrameContext::LBRACE() {
  return getToken(ontologyParser::LBRACE, 0);
}

tree::TerminalNode* ontologyParser::FrameContext::RBRACE() {
  return getToken(ontologyParser::RBRACE, 0);
}

std::vector<ontologyParser::Class_Context *> ontologyParser::FrameContext::class_() {
  return getRuleContexts<ontologyParser::Class_Context>();
}

ontologyParser::Class_Context* ontologyParser::FrameContext::class_(size_t i) {
  return getRuleContext<ontologyParser::Class_Context>(i);
}

std::vector<ontologyParser::ActContext *> ontologyParser::FrameContext::act() {
  return getRuleContexts<ontologyParser::ActContext>();
}

ontologyParser::ActContext* ontologyParser::FrameContext::act(size_t i) {
  return getRuleContext<ontologyParser::ActContext>(i);
}

std::vector<ontologyParser::Enum_Context *> ontologyParser::FrameContext::enum_() {
  return getRuleContexts<ontologyParser::Enum_Context>();
}

ontologyParser::Enum_Context* ontologyParser::FrameContext::enum_(size_t i) {
  return getRuleContext<ontologyParser::Enum_Context>(i);
}

std::vector<ontologyParser::AssocContext *> ontologyParser::FrameContext::assoc() {
  return getRuleContexts<ontologyParser::AssocContext>();
}

ontologyParser::AssocContext* ontologyParser::FrameContext::assoc(size_t i) {
  return getRuleContext<ontologyParser::AssocContext>(i);
}


size_t ontologyParser::FrameContext::getRuleIndex() const {
  return ontologyParser::RuleFrame;
}


antlrcpp::Any ontologyParser::FrameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitFrame(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::FrameContext* ontologyParser::frame() {
  FrameContext *_localctx = _tracker.createInstance<FrameContext>(_ctx, getState());
  enterRule(_localctx, 2, ontologyParser::RuleFrame);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    match(ontologyParser::FRAME);
    setState(38);
    match(ontologyParser::NAME);
    setState(39);
    match(ontologyParser::LBRACE);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ontologyParser::CLASS) {
      setState(40);
      class_();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ontologyParser::ACTIVITY) {
      setState(46);
      act();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ontologyParser::ENUMERATION) {
      setState(52);
      enum_();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ontologyParser::ASSOCIATION) {
      setState(58);
      assoc();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(ontologyParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_Context ------------------------------------------------------------------

ontologyParser::Class_Context::Class_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::Class_Context::CLASS() {
  return getToken(ontologyParser::CLASS, 0);
}

tree::TerminalNode* ontologyParser::Class_Context::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::Class_Context::LBRACE() {
  return getToken(ontologyParser::LBRACE, 0);
}

tree::TerminalNode* ontologyParser::Class_Context::RBRACE() {
  return getToken(ontologyParser::RBRACE, 0);
}

ontologyParser::GenContext* ontologyParser::Class_Context::gen() {
  return getRuleContext<ontologyParser::GenContext>(0);
}

ontologyParser::AttrContext* ontologyParser::Class_Context::attr() {
  return getRuleContext<ontologyParser::AttrContext>(0);
}

ontologyParser::OperContext* ontologyParser::Class_Context::oper() {
  return getRuleContext<ontologyParser::OperContext>(0);
}

ontologyParser::AggrContext* ontologyParser::Class_Context::aggr() {
  return getRuleContext<ontologyParser::AggrContext>(0);
}

ontologyParser::CompContext* ontologyParser::Class_Context::comp() {
  return getRuleContext<ontologyParser::CompContext>(0);
}

ontologyParser::DepContext* ontologyParser::Class_Context::dep() {
  return getRuleContext<ontologyParser::DepContext>(0);
}

ontologyParser::ImplContext* ontologyParser::Class_Context::impl() {
  return getRuleContext<ontologyParser::ImplContext>(0);
}

ontologyParser::CommContext* ontologyParser::Class_Context::comm() {
  return getRuleContext<ontologyParser::CommContext>(0);
}


size_t ontologyParser::Class_Context::getRuleIndex() const {
  return ontologyParser::RuleClass_;
}


antlrcpp::Any ontologyParser::Class_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitClass_(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::Class_Context* ontologyParser::class_() {
  Class_Context *_localctx = _tracker.createInstance<Class_Context>(_ctx, getState());
  enterRule(_localctx, 4, ontologyParser::RuleClass_);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(ontologyParser::CLASS);
    setState(67);
    match(ontologyParser::NAME);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COLON) {
      setState(68);
      gen();
    }
    setState(71);
    match(ontologyParser::LBRACE);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::ATTRIBUTES) {
      setState(72);
      attr();
    }
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::OPERATIONS) {
      setState(75);
      oper();
    }
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::AGGREGATION) {
      setState(78);
      aggr();
    }
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COMPOSITION) {
      setState(81);
      comp();
    }
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::DEPENDENCY) {
      setState(84);
      dep();
    }
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::IMPLEMENTATION) {
      setState(87);
      impl();
    }
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COMMENT) {
      setState(90);
      comm();
    }
    setState(93);
    match(ontologyParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_Context ------------------------------------------------------------------

ontologyParser::Enum_Context::Enum_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::Enum_Context::ENUMERATION() {
  return getToken(ontologyParser::ENUMERATION, 0);
}

tree::TerminalNode* ontologyParser::Enum_Context::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::Enum_Context::LBRACE() {
  return getToken(ontologyParser::LBRACE, 0);
}

ontologyParser::Enum_literalsContext* ontologyParser::Enum_Context::enum_literals() {
  return getRuleContext<ontologyParser::Enum_literalsContext>(0);
}

tree::TerminalNode* ontologyParser::Enum_Context::RBRACE() {
  return getToken(ontologyParser::RBRACE, 0);
}


size_t ontologyParser::Enum_Context::getRuleIndex() const {
  return ontologyParser::RuleEnum_;
}


antlrcpp::Any ontologyParser::Enum_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitEnum_(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::Enum_Context* ontologyParser::enum_() {
  Enum_Context *_localctx = _tracker.createInstance<Enum_Context>(_ctx, getState());
  enterRule(_localctx, 6, ontologyParser::RuleEnum_);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(ontologyParser::ENUMERATION);
    setState(96);
    match(ontologyParser::NAME);
    setState(97);
    match(ontologyParser::LBRACE);
    setState(98);
    enum_literals();
    setState(99);
    match(ontologyParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActContext ------------------------------------------------------------------

ontologyParser::ActContext::ActContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::ActContext::ACTIVITY() {
  return getToken(ontologyParser::ACTIVITY, 0);
}

tree::TerminalNode* ontologyParser::ActContext::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::ActContext::LBRACE() {
  return getToken(ontologyParser::LBRACE, 0);
}

ontologyParser::InContext* ontologyParser::ActContext::in() {
  return getRuleContext<ontologyParser::InContext>(0);
}

ontologyParser::OutContext* ontologyParser::ActContext::out() {
  return getRuleContext<ontologyParser::OutContext>(0);
}

tree::TerminalNode* ontologyParser::ActContext::RBRACE() {
  return getToken(ontologyParser::RBRACE, 0);
}

ontologyParser::GenContext* ontologyParser::ActContext::gen() {
  return getRuleContext<ontologyParser::GenContext>(0);
}

ontologyParser::AggrContext* ontologyParser::ActContext::aggr() {
  return getRuleContext<ontologyParser::AggrContext>(0);
}

ontologyParser::CompContext* ontologyParser::ActContext::comp() {
  return getRuleContext<ontologyParser::CompContext>(0);
}

ontologyParser::DepContext* ontologyParser::ActContext::dep() {
  return getRuleContext<ontologyParser::DepContext>(0);
}

ontologyParser::ImplContext* ontologyParser::ActContext::impl() {
  return getRuleContext<ontologyParser::ImplContext>(0);
}

ontologyParser::CommContext* ontologyParser::ActContext::comm() {
  return getRuleContext<ontologyParser::CommContext>(0);
}


size_t ontologyParser::ActContext::getRuleIndex() const {
  return ontologyParser::RuleAct;
}


antlrcpp::Any ontologyParser::ActContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitAct(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::ActContext* ontologyParser::act() {
  ActContext *_localctx = _tracker.createInstance<ActContext>(_ctx, getState());
  enterRule(_localctx, 8, ontologyParser::RuleAct);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(ontologyParser::ACTIVITY);
    setState(102);
    match(ontologyParser::NAME);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COLON) {
      setState(103);
      gen();
    }
    setState(106);
    match(ontologyParser::LBRACE);
    setState(107);
    in();
    setState(108);
    out();
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::AGGREGATION) {
      setState(109);
      aggr();
    }
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COMPOSITION) {
      setState(112);
      comp();
    }
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::DEPENDENCY) {
      setState(115);
      dep();
    }
    setState(119);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::IMPLEMENTATION) {
      setState(118);
      impl();
    }
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ontologyParser::COMMENT) {
      setState(121);
      comm();
    }
    setState(124);
    match(ontologyParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GenContext ------------------------------------------------------------------

ontologyParser::GenContext::GenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::GenContext::COLON() {
  return getToken(ontologyParser::COLON, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::GenContext::NAME() {
  return getTokens(ontologyParser::NAME);
}

tree::TerminalNode* ontologyParser::GenContext::NAME(size_t i) {
  return getToken(ontologyParser::NAME, i);
}

std::vector<tree::TerminalNode *> ontologyParser::GenContext::COMMA() {
  return getTokens(ontologyParser::COMMA);
}

tree::TerminalNode* ontologyParser::GenContext::COMMA(size_t i) {
  return getToken(ontologyParser::COMMA, i);
}


size_t ontologyParser::GenContext::getRuleIndex() const {
  return ontologyParser::RuleGen;
}


antlrcpp::Any ontologyParser::GenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitGen(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::GenContext* ontologyParser::gen() {
  GenContext *_localctx = _tracker.createInstance<GenContext>(_ctx, getState());
  enterRule(_localctx, 10, ontologyParser::RuleGen);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(ontologyParser::COLON);
    setState(131);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(127);
        match(ontologyParser::NAME);
        setState(128);
        match(ontologyParser::COMMA); 
      }
      setState(133);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    }
    setState(134);
    match(ontologyParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssocContext ------------------------------------------------------------------

ontologyParser::AssocContext::AssocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::AssocContext::ASSOCIATION() {
  return getToken(ontologyParser::ASSOCIATION, 0);
}

tree::TerminalNode* ontologyParser::AssocContext::STRING() {
  return getToken(ontologyParser::STRING, 0);
}

tree::TerminalNode* ontologyParser::AssocContext::LBRACKET() {
  return getToken(ontologyParser::LBRACKET, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::AssocContext::NAME() {
  return getTokens(ontologyParser::NAME);
}

tree::TerminalNode* ontologyParser::AssocContext::NAME(size_t i) {
  return getToken(ontologyParser::NAME, i);
}

tree::TerminalNode* ontologyParser::AssocContext::COMMA() {
  return getToken(ontologyParser::COMMA, 0);
}

tree::TerminalNode* ontologyParser::AssocContext::RBRACKET() {
  return getToken(ontologyParser::RBRACKET, 0);
}

tree::TerminalNode* ontologyParser::AssocContext::SEMICOLON() {
  return getToken(ontologyParser::SEMICOLON, 0);
}


size_t ontologyParser::AssocContext::getRuleIndex() const {
  return ontologyParser::RuleAssoc;
}


antlrcpp::Any ontologyParser::AssocContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitAssoc(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::AssocContext* ontologyParser::assoc() {
  AssocContext *_localctx = _tracker.createInstance<AssocContext>(_ctx, getState());
  enterRule(_localctx, 12, ontologyParser::RuleAssoc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    match(ontologyParser::ASSOCIATION);
    setState(137);
    match(ontologyParser::STRING);
    setState(138);
    match(ontologyParser::LBRACKET);
    setState(139);
    match(ontologyParser::NAME);
    setState(140);
    match(ontologyParser::COMMA);
    setState(141);
    match(ontologyParser::NAME);
    setState(142);
    match(ontologyParser::RBRACKET);
    setState(143);
    match(ontologyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttrContext ------------------------------------------------------------------

ontologyParser::AttrContext::AttrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::AttrContext::ATTRIBUTES() {
  return getToken(ontologyParser::ATTRIBUTES, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::AttrContext::STRING() {
  return getTokens(ontologyParser::STRING);
}

tree::TerminalNode* ontologyParser::AttrContext::STRING(size_t i) {
  return getToken(ontologyParser::STRING, i);
}

tree::TerminalNode* ontologyParser::AttrContext::SEMICOLON() {
  return getToken(ontologyParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::AttrContext::COMMA() {
  return getTokens(ontologyParser::COMMA);
}

tree::TerminalNode* ontologyParser::AttrContext::COMMA(size_t i) {
  return getToken(ontologyParser::COMMA, i);
}


size_t ontologyParser::AttrContext::getRuleIndex() const {
  return ontologyParser::RuleAttr;
}


antlrcpp::Any ontologyParser::AttrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitAttr(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::AttrContext* ontologyParser::attr() {
  AttrContext *_localctx = _tracker.createInstance<AttrContext>(_ctx, getState());
  enterRule(_localctx, 14, ontologyParser::RuleAttr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(ontologyParser::ATTRIBUTES);
    setState(150);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(146);
        match(ontologyParser::STRING);
        setState(147);
        match(ontologyParser::COMMA); 
      }
      setState(152);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx);
    }
    setState(153);
    match(ontologyParser::STRING);
    setState(154);
    match(ontologyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperContext ------------------------------------------------------------------

ontologyParser::OperContext::OperContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::OperContext::OPERATIONS() {
  return getToken(ontologyParser::OPERATIONS, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::OperContext::STRING() {
  return getTokens(ontologyParser::STRING);
}

tree::TerminalNode* ontologyParser::OperContext::STRING(size_t i) {
  return getToken(ontologyParser::STRING, i);
}

tree::TerminalNode* ontologyParser::OperContext::SEMICOLON() {
  return getToken(ontologyParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::OperContext::COMMA() {
  return getTokens(ontologyParser::COMMA);
}

tree::TerminalNode* ontologyParser::OperContext::COMMA(size_t i) {
  return getToken(ontologyParser::COMMA, i);
}


size_t ontologyParser::OperContext::getRuleIndex() const {
  return ontologyParser::RuleOper;
}


antlrcpp::Any ontologyParser::OperContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitOper(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::OperContext* ontologyParser::oper() {
  OperContext *_localctx = _tracker.createInstance<OperContext>(_ctx, getState());
  enterRule(_localctx, 16, ontologyParser::RuleOper);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(ontologyParser::OPERATIONS);
    setState(161);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 20, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(157);
        match(ontologyParser::STRING);
        setState(158);
        match(ontologyParser::COMMA); 
      }
      setState(163);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 20, _ctx);
    }
    setState(164);
    match(ontologyParser::STRING);
    setState(165);
    match(ontologyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AggrContext ------------------------------------------------------------------

ontologyParser::AggrContext::AggrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::AggrContext::AGGREGATION() {
  return getToken(ontologyParser::AGGREGATION, 0);
}

tree::TerminalNode* ontologyParser::AggrContext::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::AggrContext::SEMICOLON() {
  return getToken(ontologyParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::AggrContext::LBRACKET() {
  return getTokens(ontologyParser::LBRACKET);
}

tree::TerminalNode* ontologyParser::AggrContext::LBRACKET(size_t i) {
  return getToken(ontologyParser::LBRACKET, i);
}

std::vector<tree::TerminalNode *> ontologyParser::AggrContext::STRING() {
  return getTokens(ontologyParser::STRING);
}

tree::TerminalNode* ontologyParser::AggrContext::STRING(size_t i) {
  return getToken(ontologyParser::STRING, i);
}

std::vector<tree::TerminalNode *> ontologyParser::AggrContext::COMMA() {
  return getTokens(ontologyParser::COMMA);
}

tree::TerminalNode* ontologyParser::AggrContext::COMMA(size_t i) {
  return getToken(ontologyParser::COMMA, i);
}

std::vector<tree::TerminalNode *> ontologyParser::AggrContext::RBRACKET() {
  return getTokens(ontologyParser::RBRACKET);
}

tree::TerminalNode* ontologyParser::AggrContext::RBRACKET(size_t i) {
  return getToken(ontologyParser::RBRACKET, i);
}


size_t ontologyParser::AggrContext::getRuleIndex() const {
  return ontologyParser::RuleAggr;
}


antlrcpp::Any ontologyParser::AggrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ontologyVisitor*>(visitor))
    return parserVisitor->visitAggr(this);
  else
    return visitor->visitChildren(this);
}

ontologyParser::AggrContext* ontologyParser::aggr() {
  AggrContext *_localctx = _tracker.createInstance<AggrContext>(_ctx, getState());
  enterRule(_localctx, 18, ontologyParser::RuleAggr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    match(ontologyParser::AGGREGATION);
    setState(168);
    match(ontologyParser::NAME);
    setState(176);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ontologyParser::LBRACKET) {
      setState(169);
      match(ontologyParser::LBRACKET);
      setState(170);
      match(ontologyParser::STRING);
      setState(171);
      match(ontologyParser::COMMA);
      setState(172);
      match(ontologyParser::STRING);
      setState(173);
      match(ontologyParser::RBRACKET);
      setState(178);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(179);
    match(ontologyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompContext ------------------------------------------------------------------

ontologyParser::CompContext::CompContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ontologyParser::CompContext::COMPOSITION() {
  return getToken(ontologyParser::COMPOSITION, 0);
}

tree::TerminalNode* ontologyParser::CompContext::NAME() {
  return getToken(ontologyParser::NAME, 0);
}

tree::TerminalNode* ontologyParser::CompContext::SEMICOLON() {
  return getToken(ontologyParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> ontologyParser::CompContext::LBRACKET() {
  return getTokens(ontologyParser::LBRACKET);
}

tree::TerminalNode* ontologyParser::CompContext::LBRACKET(size_t i) {
  return getToken(ontologyParser::LBRACKET, i);
}

std::vector<tree::TerminalNode *> ontologyParser::CompContext::STRING() {
  return getTokens(ontologyParser::STRING);
}

tree::TerminalNode* ontologyParser::CompContext::STRING(size_t i) {
  return getToken(ontologyParser::STRING, i);
}

std::vector<tree::TerminalNode *> ontologyParser::CompContext::COMMA() {
  return getTokens(ontologyParser::COMMA);
}

tree::TerminalNode* ontologyParser::CompContext::COMMA(size_t i) {
  return getToken(ontologyParser::COMMA, i);
}

std::vector<tree::TerminalNode *> ontologyParser::CompContext::RBRACKET() {
  return getTokens(ontologyParser::RBRACKET);
}
